--- a/style.css
+++ b/style.css
@@ -458,18 +458,24 @@
 
 .project-items{
     padding-left: 0.5em;
+    /* text-align: center; */
     background-color: var(--filled-green);
+
     border-radius: 1em;
     -webkit-border-radius: 1em;
     -moz-border-radius: 1em;
     -ms-border-radius: 1em;
     -o-border-radius: 1em;
+
     box-shadow: inset 0.5em 0 0 var(--nav-color), 0.2em 0.2em 0.2em rgba(0,0,0,0.3);
+    
     display: flex;
     flex-direction: column;
-    justify-content: stretch;
-    align-items: stretch;
-    padding: 1em 1em 1em 2em;
+    /* justify-content: stretch;
+    align-items: stretch; */
+    
+    padding: 0.6em 1em 1em 2em;
+
     transition: all 0.5s ease;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
@@ -493,30 +499,44 @@
     /* max-width: 600px; */
 /* } */
 
+.github-link{
+    margin-top: 0.75em;
+    margin-right: 0.75em;
+    text-align: end;
+    /* padding: 1em 0 0em 0; */
+}
 
-.project-items > div{
-    display: flex;
+.image-container{
+    
+    /* display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: column; */
+}
+.image-container p{
+    /* width: 50ch; */
+    text-align: center;
+}
+.display-image{
+    text-align: center;
 }
 
 .project-images{
     margin-top: 20px;
-    max-width: 100%;
-    object-fit: contain;
-    max-height: 80%;
-    
-    border-radius: 1.2em;
-    -webkit-border-radius: 1.2em;
-    -moz-border-radius: 1.2em;
-    -ms-border-radius: 1.2em;
-    -o-border-radius: 1.2em;
-}
+    /* max-width: 100%;
+    height: auto; */
+    width: 350px;
+    height: 200px;
+    object-fit:fill;
 
-
-.display-image{
-
+    /*max-height: 100%;
+    *//*padding-right: 10px;
+    */border-radius: 10px;
+    margin-bottom: 1em;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
 }
 
 .project-items h4{
@@ -538,6 +558,11 @@
     .project-boxes{
         grid-template-columns: 1fr;
     }
+    /* .project-images{
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    } */
     
 }
 
