--- a/style.css
+++ b/style.css
@@ -378,7 +378,7 @@
 
 .main-content{
     display: grid;
-    grid-template-columns: 80% 1fr;
+    grid-template-columns: 3fr 1fr;
     gap: 20px;
     background-color: var(--light-green);
     color: #f0f0f0;
@@ -439,7 +439,8 @@
 }
 
 .main-content :is(h3){
-    padding-bottom: 0.5em;
+    padding-bottom: 0.7em;
+    padding-left: 0.5em;
     font-size: 1.4rem;
 }
 
@@ -448,15 +449,16 @@
 
 .project-boxes{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1.5fr);
     gap: 30px;
 }
 .project-items p{
-
     letter-spacing: 1px;
 }
 
 .project-items{
+    position: relative;
+
     padding-left: 0.5em;
     /* text-align: center; */
     background-color: var(--filled-green);
@@ -500,14 +502,20 @@
 /* } */
 
 .github-link{
+    position: absolute;
+    bottom: 0.75em;
+    right: 0.75em;
     margin-top: 0.75em;
     margin-right: 0.75em;
     text-align: end;
+    /* justify-content: flex-end; */
     /* padding: 1em 0 0em 0; */
 }
 
 .image-container{
-    
+    display: flex;
+    flex-direction: column;
+    /* text-align: center; */
     /* display: flex;
     justify-content: center;
     align-items: center;
@@ -516,7 +524,12 @@
 .image-container p{
     /* width: 50ch; */
     text-align: center;
+    margin-bottom: 3.25em;
 }
+/* .image-container a{
+    justify-content: flex-start;
+} */
+
 .display-image{
     text-align: center;
 }
@@ -525,8 +538,8 @@
     margin-top: 20px;
     /* max-width: 100%;
     height: auto; */
-    width: 350px;
-    height: 200px;
+    width: 375px;
+    height: 250px;
     object-fit:fill;
 
     /*max-height: 100%;
@@ -543,9 +556,13 @@
     font-size: 1.35rem;
 }
 
+
+
 .project-container h3, .update-container h3 {
     /* padding: 0.5em 0.5em 0.5em 0; */
 }
+
+
 
 @media screen and (max-width: 850px){
     .main-content{
@@ -557,7 +574,15 @@
     
     .project-boxes{
         grid-template-columns: 1fr;
+        margin-top: 0.6em;
     }
+    .project-container h3{
+        text-align: center;
+    }
+    /* .project-boxes{
+
+    } */
+    
     /* .project-images{
         width: 100%;
         height: auto;
@@ -648,7 +673,7 @@
 .announcements-boxes .update-items:last-child p {
     border-bottom: none;
 }
-
+/* --------------------------------- */
 .update-container h3, .trending-container h3{
     text-align: center;
 }
