--- a/style.css
+++ b/style.css
@@ -541,7 +541,8 @@
     /* max-width: 100%;
     height: auto; */
     width: 100%;
-    height: auto;
+    max-height: 300px;
+    /* height: auto; */
     
     object-fit:fill;
     /* object-fit: contain; */
