updated navbar links

--- a/pages/components/template.html
+++ b/pages/components/template.html
@@ -24,7 +24,8 @@
         <div class="main-links">
             <ul class="box1">
                 <li class="content-links">
-                    <a href="../../index.html">
+                    <a href="../../GHM_Dev/index.html">
+                        <!-- <a href="../../index.html"> -->
 
                         <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24" class="svg-img">
                             <path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" />
@@ -33,7 +34,8 @@
                     </a>
                 </li>
                 <li class="content-links">
-                    <a href="../../pages/about.html">
+                    <a href="../../GHM_Dev/pages/about.html">
+                        <!-- <a href="../../pages/about.html"> -->
 
                         <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24">
                             <path
@@ -43,7 +45,8 @@
                     </a>
                 </li>
                 <li class="content-links">
-                    <a href="../../pages/robotics.html">
+                    <a href="../../GHM_Dev/pages/robotics.html">
+                        <!-- <a href="../../pages/robotics.html"> -->
 
                         <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24">
                             <path
