--- a/style.css
+++ b/style.css
@@ -585,6 +585,9 @@
     .project-container h3{
         text-align: center;
     }
+    .footer{
+        text-align: center;
+    }
     /* .project-boxes{
 
     } */
