--- a/style.css
+++ b/style.css
@@ -706,7 +706,7 @@
 }
 
 .footer{
-    
+    text-align: center;
     font-size: 1.1rem;
     background-color: var(--light-green);
     display: flex;
