updated links, history page create, css files updated

--- a/pages/components/template.html
+++ b/pages/components/template.html
@@ -23,68 +23,68 @@
         </div>
         <div class="main-links">
             <ul class="box1">
-                <li class="content-links">
-                    <a href="../../GHM_Dev/index.html">
-                        <!-- <a href="../../index.html"> -->
-
+                <!-- <li class="content-links"> -->
+                <a href="../../GHM_Dev/index.html">
+                    <a href="../../index.html">
                         <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24" class="svg-img">
                             <path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" />
                         </svg>
                         <span class="text">Home</span>
                     </a>
-                </li>
-                <li class="content-links">
-                    <a href="../../GHM_Dev/pages/about.html">
-                        <!-- <a href="../../pages/about.html"> -->
+                    </li>
+                    <li class="content-links">
+                        <a href="../../GHM_Dev/pages/about.html">
+                            <!-- <a href="../../pages/about.html"> -->
 
-                        <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24">
-                            <path
-                                d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z" />
-                        </svg>
-                        <span class="text">Profile</span>
-                    </a>
-                </li>
-                <li class="content-links">
-                    <a href="../../GHM_Dev/pages/robotics.html">
-                        <!-- <a href="../../pages/robotics.html"> -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24">
+                                <path
+                                    d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z" />
+                            </svg>
+                            <span class="text">Profile</span>
+                        </a>
+                    </li>
+                    <li class="content-links">
+                        <a href="../../GHM_Dev/pages/robotics.html">
+                            <!-- <a href="../../pages/robotics.html"> -->
 
-                        <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24">
-                            <path
-                                d="M22 14H21C21 10.13 17.87 7 14 7H13V5.73C13.6 5.39 14 4.74 14 4C14 2.9 13.11 2 12 2S10 2.9 10 4C10 4.74 10.4 5.39 11 5.73V7H10C6.13 7 3 10.13 3 14H2C1.45 14 1 14.45 1 15V18C1 18.55 1.45 19 2 19H3V20C3 21.11 3.9 22 5 22H19C20.11 22 21 21.11 21 20V19H22C22.55 19 23 18.55 23 18V15C23 14.45 22.55 14 22 14M8.68 17.04L7.5 15.86L6.32 17.04L5.14 15.86L7.5 13.5L9.86 15.86L8.68 17.04M17.68 17.04L16.5 15.86L15.32 17.04L14.14 15.86L16.5 13.5L18.86 15.86L17.68 17.04Z" />
-                        </svg>
-                        <span class="text">Robotics</span>
-                    </a>
-                </li>
-                <li class="content-links">
-                    <a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24">
+                                <path
+                                    d="M22 14H21C21 10.13 17.87 7 14 7H13V5.73C13.6 5.39 14 4.74 14 4C14 2.9 13.11 2 12 2S10 2.9 10 4C10 4.74 10.4 5.39 11 5.73V7H10C6.13 7 3 10.13 3 14H2C1.45 14 1 14.45 1 15V18C1 18.55 1.45 19 2 19H3V20C3 21.11 3.9 22 5 22H19C20.11 22 21 21.11 21 20V19H22C22.55 19 23 18.55 23 18V15C23 14.45 22.55 14 22 14M8.68 17.04L7.5 15.86L6.32 17.04L5.14 15.86L7.5 13.5L9.86 15.86L8.68 17.04M17.68 17.04L16.5 15.86L15.32 17.04L14.14 15.86L16.5 13.5L18.86 15.86L17.68 17.04Z" />
+                            </svg>
+                            <span class="text">Robotics</span>
+                        </a>
+                    </li>
+                    <li class="content-links">
+                        <a href="../../GHM_Dev/pages/history.html">
+                            <!-- <a href="../../pages/history.html"> -->
 
-                        <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24">
-                            <path
-                                d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12S17.5 2 12 2M17 13H11V7H12.5V11.5H17V13Z" />
-                        </svg>
-                        <span class="text">History</span>
-                    </a>
-                </li>
-                <li class="content-links">
-                    <a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24">
+                                <path
+                                    d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12S17.5 2 12 2M17 13H11V7H12.5V11.5H17V13Z" />
+                            </svg>
+                            <span class="text">History</span>
+                        </a>
+                    </li>
+                    <li class="content-links">
+                        <a href="#">
 
-                        <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24">
-                            <path
-                                d="M15,7H20.5L15,1.5V7M8,0H16L22,6V18A2,2 0 0,1 20,20H8C6.89,20 6,19.1 6,18V2A2,2 0 0,1 8,0M4,4V22H20V24H4A2,2 0 0,1 2,22V4H4Z" />
-                        </svg>
-                        <span class="text">Tasks</span>
-                    </a>
-                </li>
-                <li class="content-links">
-                    <a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24">
+                                <path
+                                    d="M15,7H20.5L15,1.5V7M8,0H16L22,6V18A2,2 0 0,1 20,20H8C6.89,20 6,19.1 6,18V2A2,2 0 0,1 8,0M4,4V22H20V24H4A2,2 0 0,1 2,22V4H4Z" />
+                            </svg>
+                            <span class="text">Tasks</span>
+                        </a>
+                    </li>
+                    <li class="content-links">
+                        <a href="#">
 
-                        <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24 ">
-                            <path
-                                d="M12,5.5A3.5,3.5 0 0,1 15.5,9A3.5,3.5 0 0,1 12,12.5A3.5,3.5 0 0,1 8.5,9A3.5,3.5 0 0,1 12,5.5M5,8C5.56,8 6.08,8.15 6.53,8.42C6.38,9.85 6.8,11.27 7.66,12.38C7.16,13.34 6.16,14 5,14A3,3 0 0,1 2,11A3,3 0 0,1 5,8M19,8A3,3 0 0,1 22,11A3,3 0 0,1 19,14C17.84,14 16.84,13.34 16.34,12.38C17.2,11.27 17.62,9.85 17.47,8.42C17.92,8.15 18.44,8 19,8M5.5,18.25C5.5,16.18 8.41,14.5 12,14.5C15.59,14.5 18.5,16.18 18.5,18.25V20H5.5V18.25M0,20V18.5C0,17.11 1.89,15.94 4.45,15.6C3.86,16.28 3.5,17.22 3.5,18.25V20H0M24,20H20.5V18.25C20.5,17.22 20.14,16.28 19.55,15.6C22.11,15.94 24,17.11 24,18.5V20Z" />
-                        </svg>
-                        <span class="text">Communities</span>
-                    </a>
-                </li>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="svg-image" viewBox="0 0 24 24 ">
+                                <path
+                                    d="M12,5.5A3.5,3.5 0 0,1 15.5,9A3.5,3.5 0 0,1 12,12.5A3.5,3.5 0 0,1 8.5,9A3.5,3.5 0 0,1 12,5.5M5,8C5.56,8 6.08,8.15 6.53,8.42C6.38,9.85 6.8,11.27 7.66,12.38C7.16,13.34 6.16,14 5,14A3,3 0 0,1 2,11A3,3 0 0,1 5,8M19,8A3,3 0 0,1 22,11A3,3 0 0,1 19,14C17.84,14 16.84,13.34 16.34,12.38C17.2,11.27 17.62,9.85 17.47,8.42C17.92,8.15 18.44,8 19,8M5.5,18.25C5.5,16.18 8.41,14.5 12,14.5C15.59,14.5 18.5,16.18 18.5,18.25V20H5.5V18.25M0,20V18.5C0,17.11 1.89,15.94 4.45,15.6C3.86,16.28 3.5,17.22 3.5,18.25V20H0M24,20H20.5V18.25C20.5,17.22 20.14,16.28 19.55,15.6C22.11,15.94 24,17.11 24,18.5V20Z" />
+                            </svg>
+                            <span class="text">Communities</span>
+                        </a>
+                    </li>
 
             </ul>
         </div>
