--- a/pages/styles/about.css
+++ b/pages/styles/about.css
@@ -89,7 +89,7 @@
     /* grid-row: 1/3; */
     /* grid-row: 1; */
     /* grid-row: 3/4; */
-    background-color: var(--filled-green);
+    background-color: var(--light-green);
 }
 
 @media screen and (max-width: 568px){
