--- a/pages/styles/about.css
+++ b/pages/styles/about.css
@@ -61,6 +61,7 @@
     grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 #navbar{
+    text-decoration: none;
     grid-row: 1/5;
     height: 100%;
     background-color: var(--nav-color);
