--- a/style.css
+++ b/style.css
@@ -101,13 +101,19 @@
     width: 100%;
     padding: 0 0 0.5em 1.25em;
 }
-.navbar .main-links li, .navbar .support-links li.support{
+.navbar .main-links li, .navbar .main-links a,.navbar .support-links li.support{
     display: flex;
     margin-bottom: 0.5em;
     align-items: center;
     list-style: none;
+    text-decoration: none;
 }
 
+/* .main-links a{
+    text-decoration: none;
+    color: white;
+    align-items: center;
+} */
 
 .navbar .support-links .support{
     margin-bottom: 15px;
@@ -140,7 +146,7 @@
     fill: var(--filled-white);
 }
 
-.navbar .title,.content-links a, .support-links li.support a{
+.navbar .title,.content-links a, .support-links li.support a, .navbar .main-links a{
     text-decoration: none;
     color: white;
     /* color: #EDEFF2; */
@@ -153,7 +159,7 @@
 }
 
 .navbar .title:hover,.content-links a:hover, .support-links .support:hover a, 
-.content-links svg:hover, .support-links li.support:hover svg, .navbar .title:hover, .icon-bell:hover{
+.content-links svg:hover, .support-links li.support:hover svg, .navbar .title:hover, .icon-bell:hover,.navbar .main-links a:hover{
     text-shadow: 2px 2px 4px #303030;
     filter: drop-shadow(2px 2px 4px rgba(255, 255, 255, 0.4));
     transform: scale(1.04);
@@ -396,6 +402,9 @@
     .navbar{
         position: sticky;
         top: 0;
+        list-style: none;
+        color: white;
+        text-decoration: none;
     }
 
     .header-container{
@@ -408,7 +417,7 @@
         justify-content: center;
         align-items: center;
     }
-    
+
     .bar-container{
         /* display: flex; */
         /* justify-content: center;
